Pull request #1287: fix placeholder in ff
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit d1c17c1cf9812fb2026564106eb9e740322917c6
Merge: 44415b4cf a40918feb
Author: Anton <a.kaprielov@adguard.com>
Date:   Fri Jul 1 16:11:14 2022 +0300

    AG-11746 merge

commit 44415b4cfadbd1c46fa4d0007ae2fb82f884b736
Author: Anton <a.kaprielov@adguard.com>
Date:   Fri Jul 1 10:19:35 2022 +0300

    AG-11746 fix placeholder in ff

--- a/Extension/src/pages/filtering-log/components/Search/search.pcss
+++ b/Extension/src/pages/filtering-log/components/Search/search.pcss
@@ -22,6 +22,7 @@
         }
 
         &::placeholder {
+            opacity: 1;
             color: var(--gray400);
 
             @media (prefers-color-scheme: dark) {
