--- a/Extension/src/pages/options/components/Filters/Search/search.pcss
+++ b/Extension/src/pages/options/components/Filters/Search/search.pcss
@@ -31,6 +31,7 @@
         }
 
         &::placeholder {
+            opacity: 1;
             color: var(--gray700);
             font-size: 14px;
 
